--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,429 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
+  font-family: "Roboto", sans-serif;
+}
+
+.model-content{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  width: 400px;
+  padding: 40px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.model-content p{
+  text-align: center;
+  margin-top: 40px;
+  color: black !important;
+  letter-spacing: 2px;
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
+.model-content p span{
+  color: #006dff;
+}
+
+.close-icon{
+  position: absolute;
+  cursor: pointer;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+  font-size: 24px;
+  color: lightcoral;
+}
+.rotate-react-icon{
+  animation: rotational 2s ease-in-out infinite;
+}
+
+@keyframes rotational {
+  0%{
+    transform: rotateZ(0deg);
+  }
+  100%{
+    transform: rotateZ(180deg);
+  }
+}
+.modal-data{
+  top: 0;
+  width: 100%;
+  display: flex;
+  background: linear-gradient(255,0,0,0.5);
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.def-ui {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  height: 90vh;
+  width: 100vw;
+  color: honeydew;
+  text-align: center;
+  background: linear-gradient(
+    rgb(255, 255, 255),
+    rgb(88, 78, 78),
+    rgb(255, 255, 255)
+  );
+}
+
+.nav {
+  background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1)
+    no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
+  white-space: nowrap;
+  /* background: black; */
+  box-shadow: 0 16px 32px rgba(0, 0, 0, 0.05);
+}
+
+.navlist {
+  display: inline-block;
+  z-index: 10;
+  width: 20%;
+  color: whitesmoke;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  padding: 16px 0;
+  text-align: center;
+  cursor: pointer;
+  border-bottom: 4px solid transparent;
+  transition: ease 1s;
+}
+
+.navlist:nth-child(1):hover {
+  border-bottom: 4px solid lightgreen;
+  color: lightgreen;
+}
+.navlist:nth-child(2):hover {
+  border-bottom: 4px solid lightskyblue;
+  color: lightskyblue;
+}
+
+.user-list-page{
+  height: 65vh;
+  background: linear-gradient(rgb(114, 113, 113),black);
+}
+.icons{
+  color: lightgreen;
+  margin-left: 4px;
+}
+
+.icons-red{
+  margin-left: 4px;
+  color: lightcoral;
+  animation: rot 1.5s ease infinite;
+
+}
+
+.background{
+background: linear-gradient(rgb(114, 113, 113),black);
+height: 18.1vh;
+color: white;
+letter-spacing: 1px;
+word-spacing: 2px;
+}
+
+.background h5{
+  padding: 10px;
+font-weight: 400;
+}
+
+ol {
+  padding: 50px 100px;
+}
+
+li {
+  color: white;
+  padding-left: 16px;
+  margin-top: 24px;
+  position: relative;
+  font-size: 16px;
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+
+li:before {
+  content: "";
+  display: block;
+  height: 42px;
+  width: 42px;
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  position: absolute;
+  top: -10px;
+  left: -36px;
+}
+
+ol.alternating-colors li:nth-child(odd):hover:before{
+  border-color: lightgreen;
+  border-bottom: 2px solid lightseagreen;
+}
+
+h4 {
+  color: rgb(216, 216, 216);
+  transition: 1s ease;
+  font-weight: 400;
+}
+
+h4::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  top: 30px;
+  border-bottom: 2px solid lightgreen;
+  width: 0%;
+  transition: 1s all ease;
+}
+
+h4:hover::before{
+  width: 15%;
+  border-bottom:2px solid;
+  border-image: 
+    linear-gradient(
+      to left, #2378d5, 
+      rgba(0, 0, 0, 0)
+    ) 1;
+}
+
+ol.alternating-colors li:nth-child(odd):before {
+  border-color: #2378d5;
+}
+
+button {
+  margin: 40px;
+  position: relative;
+  background: #444;
+  background-size: cover;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: none;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  padding: 1rem 3rem;
+  transition: 0.2s;
+}
+
+button:hover {
+  letter-spacing: 0.2rem;
+  padding: 1.1rem 3.1rem;
+  background: var(--clr);
+  color: #006dff;
+  box-shadow: 0 0 35px var(--clr);
+  animation: box 3s infinite;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  color: white;
+  background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1)
+    no-repeat center center fixed;
+  background-size: cover;
+}
+
+.homepage h2{
+  font-weight: 400;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.icons-modals{
+  position: absolute;
+  padding: 20px;
+  left: 160px;
+  top: 20px;
+  font-size: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.modal-main{
+  position: relative;
+  top: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.modal-button{
+  margin: 40px;
+  position: relative;
+  background: #444;
+  background-size: cover;
   color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: none;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  padding: 1rem 3rem;
+  transition: 0.2s;
 }
 
-.App-link {
-  color: #61dafb;
+button span {
+  position: relative;
+  z-index: 1;
+  letter-spacing: 2px;
+}
+button i {
+  position: absolute;
+  inset: 0;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button i::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  border-radius: 50%;
+  height: 10px;
+  left: 80%;
+  top: -7px;
+  border: 2px solid black;
+  background: white;
+  transition: 0.2s;
+}
+
+button:hover i::before {
+  border: 2px solid var(--clr);
+  left: 20%;
+  background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1)
+    no-repeat center center fixed;
+  background-size: cover;
+  animation: move 3s infinite;
+}
+
+button i::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left: 20%;
+  border-radius: 50%;
+  bottom: -7px;
+  border: 2px solid black;
+  background: white;
+  transition: 0.2s;
+}
+
+button:hover i::after {
+  border: 2px solid var(--clr);
+  left: 80%;
+  background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1)
+    no-repeat center center fixed;
+  background-size: cover;
+  animation: move 3s infinite;
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(0);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
+
+@keyframes box {
+  0% {
+    box-shadow: 0 0 0px #27272c;
+  }
+  50% {
+    box-shadow: 0 0 25px var(--clr);
+  }
+  100% {
+    box-shadow:0 0 0px #27272c;
+  }
+}
+
+.main-data {
+  background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1)
+    no-repeat center center fixed;
+  background-size: cover;
+  height: 100vh;
+}
+
+.card {
+  height: 400px;
+  width: 320px;
+  background-color: rgba(255, 255, 255, 0.06);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 8px;
+  -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+  box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+  font-family: "Poppins", sans-serif;
+}
+
+h6 {
+  margin: 0;
+}
+.desc {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 25px;
+}
+
+.secondary-text {
+  padding-left: 40px ;
+  width: 100%;
+  justify-content: flex-start;
+  display: flex;
+  color: white;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin: 5px 0;
+  margin-top: 20px;
+}
+h3{
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 10px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  font-weight: normal;
+  border-bottom: 2px solid lightblue;
+}
+.details {
+  width: 100%;
+  height: 60%;
+  padding: 5px 0;
+  -ms-grid-columns: auto auto;
+  grid-template-columns: auto auto;
+  background-color: rgba(255, 255, 255, 0.06);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  position: absolute;
+  bottom: 0;
+  border-radius: 0 0 8px 8px;
+  
+}
+
+
